# graphinator

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac.in  configure.sh
icons/: Makefile.am
panel-plugin/: Makefile.am  collector.c  collector.h  collector_cpu.c  collector_cpu.h  collector_mem.c  collector_mem.h  cpu_info.c  data.c  data.h  defaults.c  defaults.h  drawing.c  drawing.h  graphinator.c  graphinator.desktop  graphinator.h  info_cpu.c  info_cpu.h  info_mem.c  info_mem.h  mem_info.c  panel_entry.c  panel_entry.h  plugin.c  plugin.h  settings.c  settings.h  utils.h
script/: cleanup  debug  install  uninstall
test/: .gitignore  cpu_usg.c  test_data.c
